syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.ds.service2";
option java_outer_classname = "Service2Impl";

package service2;

// Interface exported by the server.
service Service2 {
    rpc service2Do(RequestMessage) returns (ResponseMessage) {}
    
}

message RequestMessage {
  string ProductNumber = 1;  
}

message ResponseMessage {
    string ProductNumber = 1;
    int32 stock = 2;
}
